--- a/src/components/Contactcards.css
+++ b/src/components/Contactcards.css
@@ -1,16 +1,21 @@
-.cards {
-    padding: 4rem;
+.contactus {
+    padding: 1rem;
     background: rgb(232, 247, 250);
 }
-  
-h1 {
+
+.contactus > h1 {
+    padding: 0.5rem;
+    color: rgb(255, 255, 255);
+    font-size: 40px;
     text-align: center;
-    color: rgb(10, 10, 10);
+    background-color: rgb(38, 9, 141);
 }
 
-p {
-    text-align: center;
+.contactus > p {
     color: rgb(10, 10, 10);
+    font-size: 20px;
+    text-align: center;
+    line-height: 2;
 }
   
 .cards__container {
