--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -20,8 +20,9 @@ video {
 
 .hero-container > h1 {
   color: #fff;
-  font-size: 100px;
+  font-size: 90px;
   margin-top: -100px;
+  line-height: 2.2;
 }
 
 .hero-container > p {
