--- a/src/components/Productcards.css
+++ b/src/components/Productcards.css
@@ -1,11 +1,14 @@
-.cards {
-    padding: 4rem;
+.product {
+    padding: 1rem;
     background: rgb(232, 247, 250);
 }
-  
-h1 {
+
+.product > h1 {
+    padding: 0.5rem;
+    color: rgb(255, 255, 255);
+    font-size: 40px;
     text-align: center;
-    color: rgb(0, 0, 0);
+    background-color: rgb(38, 9, 141);
 }
   
 .cards__container {
