--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer-container {
     background-color: #242424;
-    padding: 2rem 0 2rem 0;
+    padding: 0rem 0 3rem 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -14,19 +14,19 @@
     align-items: center;
     text-align: center;
   
-    margin-bottom: 24px;
-    padding: 24px;
+    margin-bottom: 15px;
+    padding: 5px;
     color: #fff;
   }
   
   .footer-subscription > p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-      'Lucida Sans', Arial, sans-serif;
+      'Lucida Sans', Arial, sans-serif,'Designil Thai Font';
   }
   
   .footer-subscription-heading {
-    margin-bottom: 24px;
-    font-size: 30px;
+    margin-bottom: 15px;
+    font-size: 35px;
     color: #ffffff;
   }
   
@@ -61,17 +61,18 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin: 16px;
+    margin: 0px;
     text-align: right;
     color: #ffffff;
-    width:550px;
+    width:450px;
     
     box-sizing: border-box;
+    float: right;
   }
 
-  
+  /* ระยะห่างที่อยู่กับข้อความ */
   .footer-link-items h2 {
-    margin-bottom: 16px;
+    margin-bottom: 10px;
   }
   
   .footer-link-items > h2 {
