--- a/src/components/ProD.css
+++ b/src/components/ProD.css
@@ -3,9 +3,9 @@
     background: rgb(207, 232, 255);
 }
   
-.h1 {
+.backpro>h1 {
     text-align: center;
-    color: rgb(247, 247, 247);
+    color: rgb(0, 0, 0);
 }
   
 .cards__container {
@@ -117,3 +117,4 @@
       margin-bottom: 2rem;
     }
 }
+
