--- a/src/components/Contacthead.css
+++ b/src/components/Contacthead.css
@@ -18,7 +18,7 @@
     line-height: 2;
 }
   
-.cards__container {
+.contact__container {
     display: flex;
     flex-flow: column;
     align-items: center;
@@ -27,23 +27,23 @@
     margin: 0 auto;
 }
   
-.cards__wrapper {
+.contact__wrapper {
     position: relative;
     margin: 50px 0 45px;
 }
   
-.cards__items {
+.contact__items {
     margin-bottom: 24px;
 }
   
-.cards__item {
+.contact__item {
     display: flex;
     flex: 1;
     margin: 0 1rem;
     border-radius: 10px;
 }
   
-.cards__item__link {
+.contact__item__link {
     display: flex;
     flex-flow: column;
     width: 100%;
@@ -55,7 +55,7 @@
     text-decoration: none;
 }
   
-.cards__item__pic-wrap {
+.contact__item__pic-wrap {
     position: relative;
     width: 100%;
     padding-top: 67%;
@@ -67,7 +67,7 @@
     animation-duration: 2s;
 }
   
-.cards__item__pic-wrap::after {
+.contact__item__pic-wrap::after {
     content: attr(data-category);
     position: absolute;
     bottom: 0;
@@ -81,7 +81,7 @@
     box-sizing: border-box;
 }
   
-.cards__item__img {
+.contact__item__img {
     position: absolute;
     top: 0;
     right: 0;
@@ -96,34 +96,34 @@
     transition: all 0.2s linear;
 }
   
-  .cards__item__img:hover {
+.contact__item__img:hover {
     transform: scale(1.1);
 }
   
-.cards__item__info {
+.contact__item__info {
     padding: 20px 30px 30px;
 }
   
-.cards__item__text {
+.contact__item__text {
     color: #252e48;
     font-size: 18px;
     line-height: 24px;
 }
   
 @media only screen and (min-width: 1200px) {
-.content__blog__container {
+.contact__blog__container {
       width: 84%;
     }
 }
   
 @media only screen and (min-width: 1024px) {
-.cards__items {
+.contact__items {
       display: flex;
     }
 }
   
 @media only screen and (max-width: 1024px) {
-.cards__item {
+.contact__item {
       margin-bottom: 2rem;
     }
 }
