--- a/src/components/Productcards.css
+++ b/src/components/Productcards.css
@@ -11,7 +11,7 @@
     background-color: rgb(38, 9, 141);
 }
   
-.cards__container {
+.product__container {
     display: flex;
     flex-flow: column;
     align-items: center;
@@ -20,7 +20,7 @@
     margin: 0 auto;
 }
   
-.cards__wrapper {
+.product__wrapper {
     position: relative;
     margin: 50px 0 45px;
 }
@@ -29,14 +29,14 @@
     margin-bottom: 24px;
 }
   
-.cards__item {
+.product__item {
     display: flex;
     flex: 1;
     margin: 0 1rem;
     border-radius: 10px;
 }
   
-.cards__item__link {
+.product__item__link {
     display: flex;
     flex-flow: column;
     width: 100%;
@@ -48,7 +48,7 @@
     text-decoration: none;
 }
   
-.cards__item__pic-wrap {
+.product__item__pic-wrap {
     position: relative;
     width: 100%;
     padding-top: 67%;
@@ -60,7 +60,7 @@
     animation-duration: 2s;
 }
   
-.cards__item__pic-wrap::after {
+.product__item__pic-wrap::after {
     content: attr(data-category);
     position: absolute;
     bottom: 0;
@@ -74,7 +74,7 @@
     box-sizing: border-box;
 }
   
-.cards__item__img {
+.product__item__img {
     position: absolute;
     top: 0;
     right: 0;
@@ -89,34 +89,34 @@
     transition: all 0.2s linear;
 }
   
-  .cards__item__img:hover {
+.product__item__img:hover {
     transform: scale(1.1);
 }
   
-.cards__item__info {
+.product__item__info {
     padding: 20px 30px 30px;
 }
   
-.cards__item__text {
+.product__item__text {
     color: #252e48;
     font-size: 18px;
     line-height: 24px;
 }
   
 @media only screen and (min-width: 1200px) {
-.content__blog__container {
+.product__blog__container {
       width: 84%;
     }
 }
   
 @media only screen and (min-width: 1024px) {
-.cards__items {
+.product__items {
       display: flex;
     }
 }
   
 @media only screen and (max-width: 1024px) {
-.cards__item {
+.product__item {
       margin-bottom: 2rem;
     }
 }
