--- a/src/components/ProD.css
+++ b/src/components/ProD.css
@@ -8,7 +8,7 @@
     color: rgb(0, 0, 0);
 }
   
-.cards__container {
+.Prod__container {
     display: flex;
     flex-flow: column;
     align-items: center;
@@ -17,7 +17,7 @@
     margin: 0 auto;
 }
   
-.cards__wrapper {
+.Prod__wrapper {
     position: relative;
     margin: 50px 0 45px;
 }
@@ -86,7 +86,7 @@
     transition: all 0.2s linear;
 }
   
-  .Prod__item__img:hover {
+.Prod__item__img:hover {
     transform: scale(1.1);
 }
   
@@ -101,7 +101,7 @@
 }
   
 @media only screen and (min-width: 1200px) {
-.content__blog__container {
+.Prod__blog__container {
       width: 84%;
     }
 }
@@ -117,4 +117,3 @@
       margin-bottom: 2rem;
     }
 }
-
