--- a/src/components/ProD.css
+++ b/src/components/ProD.css
@@ -1,11 +1,11 @@
 .backpro {
     padding: 4rem;
-    background: rgb(207, 232, 255);
+    background: rgb(214, 250, 255);
 }
   
 .backpro>h1 {
     text-align: center;
-    color: rgb(0, 0, 0);
+    color: rgb(51, 50, 50);
 }
   
 .cards__container {
@@ -116,5 +116,20 @@
 .Prod__item {
       margin-bottom: 2rem;
     }
+}
+.Proo{
+    display: block;
+    text-align: center;
+    margin: 2rem auto;
+    border-radius: 15px;
+    width: 50%;
+    text-decoration: none;
+    font-size: 1.5rem;
+    background-color: transparent;
+    color: rgb(0, 0, 0);
+    padding: 14px 20px;
+    border: 1px solid rgb(0, 0, 0);
+    transition: all 0.3s ease-out;
+
 }
 
