--- a/src/components/Productcards.css
+++ b/src/components/Productcards.css
@@ -41,7 +41,7 @@
     display: flex;
     flex-flow: column;
     width: 100%;
-    box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.17);
     -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
     filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
     border-radius: 10px;
@@ -84,9 +84,10 @@
     display: block;
     width: 100%;
     max-width: 100%;
-    height: 100%;
-    max-height: 100%;
+    height: auto;
+    max-height: 80%;
     object-fit: cover;
+    padding: 5px;
     transition: all 0.2s linear;
 }
   
