--- a/src/components/Perfcards.css
+++ b/src/components/Perfcards.css
@@ -1,14 +1,15 @@
 .perfomance {
-    padding: 1rem;
+    padding: 0.25rem; /*ระยะห่างกล่องข้อความกับข้างๆ*/
     background: rgb(232, 247, 250);
 }
 
 .perfomance > h1 {
-    padding: 0.5rem;
+    padding: 4rem;
     color: rgb(255, 255, 255);
     font-size: 40px;
     text-align: center;
-    background-color: rgb(38, 9, 141);
+    /* background-color: rgb(38, 9, 141); */
+    background:url("../images/GGGGG.gif");
 }
   
 .performance__container {
