--- a/src/components/Productcards.css
+++ b/src/components/Productcards.css
@@ -9,6 +9,8 @@
     font-size: 40px;
     text-align: center;
     background-color: rgb(38, 9, 141);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
 }
   
 .product__container {
