--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -22,6 +22,8 @@
         padding: 14px 20px;
         border: 1px solid rgb(189, 225, 255);
         transition: all 0.3s ease-out;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+        'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
   
   
 }
@@ -32,6 +34,8 @@
   font-size: 40px;
   margin-top: -40px;
   text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+        'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
 }
 
 .cards__container {
@@ -50,6 +54,7 @@
 
 .cards__items {
   margin-bottom: 24px;
+  
 }
 
 .cards__item {
@@ -57,6 +62,8 @@
   flex: 1;
   margin: 0 1rem;
   border-radius: 10px;
+
+  
 }
 
 .cards__item__link {
@@ -69,6 +76,8 @@
   border-radius: 10px;
   overflow: hidden;
   text-decoration: none;
+  
+  
 }
 
 .cards__item__pic-wrap {
@@ -95,6 +104,8 @@
   color: #fff;
   background-color: #1f98f4;
   box-sizing: border-box;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+  'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
 }
 
 .cards__item__img {
@@ -124,6 +135,8 @@
   color: #252e48;
   font-size: 18px;
   line-height: 24px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+  'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
 }
 
 @media only screen and (min-width: 1200px) {
@@ -157,6 +170,8 @@
   padding: 14px 20px;
   border: 3px solid rgb(0, 0, 0);
   transition: all 0.3s ease-out;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+  'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
 }
 .Percard:hover{
   box-shadow: 0 0 6px 4px rgb(0, 0, 0);
