--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -31,7 +31,7 @@ video {
   color: #fff;
   font-size: 32px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif,'Sarabun';
+    'Lucida Sans', Arial, sans-serif,'Kanit';
     
 }
 
