--- a/src/components/Perfcards.css
+++ b/src/components/Perfcards.css
@@ -116,7 +116,8 @@
   
 @media only screen and (min-width: 1024px) {
 .performance__items {
-      display: flex;
+    display: grid;
+    grid-template-columns: 600px 600px ;
     }
 }
   
