--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -63,12 +63,11 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin: 0px;
-    
+    margin-left: 5cm;
+    margin-right: -2.5cm;   
     text-align: right;
     color: #ffffff;
-    width: 460px;
-    
+    width: 460px;   
     box-sizing: border-box;
     float: right;
   }
@@ -160,8 +159,7 @@
     line-height:  110px;
     color: rgb(255, 255, 255);
     margin-bottom: -50px;
-    text-indent: 0.35cm;
-    padding: 2rem 0 1rem ;
+    padding: 4rem 0 2rem ;
   }
   
   @media screen and (max-width: 820px) {
