--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -1,12 +1,13 @@
 .cards {
-  padding: 0.5rem;
+  padding: 2rem;
   background: rgb(232, 247, 250);
 }
 
 .cards > h1 {
   padding: 4rem;
   color: rgb(10, 10, 10);
-  font-size: 40px;
+  font-size: 1.5rem;
+  font-weight: 600;
   margin-top: -40px;
   text-align: center;
   text-decoration:underline;
@@ -14,17 +15,15 @@
   text-align: center;
   margin: 2rem auto;
   border-radius: 20px;
-  width: 40%;
+  width: 50%;
   text-decoration: none;
-  font-size: 1.5rem;
   background-color: #1f98f4;
   color: rgb(255, 239, 239);
   padding: 14px 20px;
   border: 1px solid rgb(189, 225, 255);
   transition: all 0.3s ease-out;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-  'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
-   
+  'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit'; 
 }
 
 .cards > p {
@@ -33,8 +32,8 @@
   font-size: 40px;
   margin-top: -40px;
   text-align: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-        'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
 }
 
 .cards__container {
@@ -52,17 +51,14 @@
 }
 
 .cards__items {
-  margin-bottom: 24px;
-  
+  margin-bottom: 24px;  
 }
 
 .cards__item {
   display: flex;
   flex: 1;
   margin: 0 1rem;
-  border-radius: 10px;
-
-  
+  border-radius: 10px;  
 }
 
 .cards__item__link {
@@ -74,9 +70,7 @@
   filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
   border-radius: 10px;
   overflow: hidden;
-  text-decoration: none;
-  
-  
+  text-decoration: none; 
 }
 
 .cards__item__pic-wrap {
@@ -159,19 +153,21 @@
 .Percard{
   display: block;
   text-align: center;
-  margin: 0.5rem auto;
+  margin: 0.5rem 0 3rem ;
   border-radius: 15px;
   width: 100%;
   text-decoration: none;
   font-size: 1.5rem;
+  font-weight: 600;
   background-color: transparent;
   color: rgb(0, 0, 0);
-  padding: 14px 20px;
-  border: 3px solid rgb(0, 0, 0);
+  padding: 12px 60px;
+  border: 3.5px solid rgb(17, 17, 116);
   transition: all 0.3s ease-out;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
   'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
 }
+
 .Percard:hover{
   box-shadow: 0 0 6px 4px rgb(0, 0, 0);
 
