--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
+    font-weight: 600;
     position: sticky;
     top: 0;
     z-index: 999;
