--- a/src/components/ProD.css
+++ b/src/components/ProD.css
@@ -3,14 +3,13 @@
     /* background: rgb(2, 71, 88); */
     /* background:#003b73 */
     /* background:Navy; */
-    background:url("../images/GGG.gif");
-    
-    
-    
+    background:url("../images/GGG.gif");   
 }
   
 .backpro>h1 {
     text-align: center;
+    margin-top: 0.5cm;
+    margin-bottom: 0.5cm;
     color: rgb(255, 255, 255);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
@@ -131,22 +130,23 @@
 }
 
 .Proo{
-        display: block;
-        text-align: center;
-        margin: 2rem auto;
-        border-radius: 15px;
-        width: 50%;
-        text-decoration: none;
-        font-size: 1.5rem;
-        background-color: transparent;
-        color: rgb(255, 255, 255);
-        box-shadow: 0 15px 30px rgba(255, 255, 255, 0.17);
-        padding: 14px 20px;
-        border: 1px solid rgb(255, 255, 255);
-        transition: all 0.3s ease-out;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-        'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
-    
+    display: block;
+    text-align: center;
+    margin: 5rem auto 0.5rem;
+    border-radius: 15px;
+    width: 50%;
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-weight: 700;
+    background-color: transparent;
+    color: rgb(255, 255, 255);
+    box-shadow: 0 15px 30px rgba(255, 255, 255, 0.17);
+    padding: 14px 20px;
+    border: 2px solid rgb(255, 255, 255);
+    transition: all 0.3s ease-out;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
+
 }
 .Proo:hover{
     box-shadow: 0 0 5px 2px rgb(255, 255, 255);
