--- a/src/components/Productcards.css
+++ b/src/components/Productcards.css
@@ -20,11 +20,14 @@
     max-width: 1120px;
     width: 90%;
     margin: 0 auto;
+    justify-content: center;
 }
   
 .product__wrapper {
     position: relative;
     margin: 50px 0 45px;
+    
+    
 }
   
 .cards__items {
@@ -54,8 +57,9 @@
 .product__item__pic-wrap {
     position: relative;
     width: 100%;
-    padding-top: 67%;
+    padding-top:85%; /*ขนาดกรอบกาด */
     overflow: hidden;
+    /* background-color: black; */
 }
   
 .fade-img {
@@ -87,10 +91,12 @@
     width: 100%;
     max-width: 100%;
     height: auto;
-    max-height: 80%;
+    max-height: 90%;
     object-fit: cover;
-    padding: 5px;
+    padding: 0px;
     transition: all 0.2s linear;
+    
+    
 }
   
 .product__item__img:hover {
@@ -99,12 +105,14 @@
   
 .product__item__info {
     padding: 20px 30px 30px;
+    background-color: rgb(255, 255, 255);
 }
   
 .product__item__text {
     color: #252e48;
     font-size: 18px;
     line-height: 24px;
+    
 }
   
 @media only screen and (min-width: 1200px) {
