--- a/src/components/ProD.css
+++ b/src/components/ProD.css
@@ -119,7 +119,9 @@
   
 @media only screen and (min-width: 1024px) {
 .Prod__items {
-      display: flex;
+      /* display: flex; */
+      display: grid;
+      grid-template-columns: 250px 250px 250px 250px ;
     }
 }
   
