--- a/src/components/Productcards.css
+++ b/src/components/Productcards.css
@@ -143,3 +143,31 @@
       margin-bottom: rem;
     }
 }
+.front{
+    display: block;
+    text-align: center;
+    margin: 5rem auto 0.5rem;
+    border-radius: 15px;
+    width: 20%;
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-weight: 700;
+    background-color: transparent;
+    color: rgb(0, 0, 0);
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.17);
+    padding: 14px 20px;
+    border: 2px solid rgb(0, 0, 0);
+    transition: all 0.3s ease-out;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
+
+}
+.front:hover{
+    box-shadow: 0 0 5px 2px rgb(0, 0, 0);
+}
+.front > a{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
+    color:rgb(0, 0, 0)
+
+}
