link to eachpro

--- a/src/components/ProD.css
+++ b/src/components/ProD.css
@@ -2,8 +2,8 @@
     padding: 2rem;
     /* background: rgb(2, 71, 88); */
     /* background:#003b73 */
-    background:rgb(0, 0, 0);
-    /* background:url("../images/GGG.gif");    */
+    /* background:rgb(0, 0, 0); */
+    background:url("../images/G11.jpg");   
 }
   
 .backpro>h1 {
