--- a/src/components/Perfcards.css
+++ b/src/components/Perfcards.css
@@ -4,11 +4,12 @@
 }
 
 .perfomance > h1 {
-    padding: 3rem;
+    padding: 0.5rem;
     color: rgb(255, 255, 255);
     font-size: 40px;
     text-align: center;
-    background-color: rgb(38, 9, 141);
+    /* background-color: rgb(38, 9, 141); */
+    background-color:#0741ad;
     /* background:url("../images/GGGGG.gif"); */
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
