--- a/src/components/Productcards.css
+++ b/src/components/Productcards.css
@@ -8,7 +8,8 @@
     color: rgb(255, 255, 255);
     font-size: 40px;
     text-align: center;
-    background-color: rgb(38, 9, 141);
+    /* background-color: rgb(38, 9, 141); */
+    background-color:#0741ad;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
 }
