--- a/src/components/Footer2.css
+++ b/src/components/Footer2.css
@@ -1,14 +1,14 @@
-.footer-container {
-    background-color: #303030;
-    padding: 2rem 0 3rem 0;
+.GG-container {
+    background-color: #383838;
+    padding: 0rem 0 3rem 0;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
     
   }
   
-  .footer-subscription {
+  .GG-subscription {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,12 +20,12 @@
     color: #fff;
   }
   
-  .footer-subscription > p {
+  .GG-subscription > p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
       'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Sarabun';
   }
   
-  .footer-subscription-heading {
+  .GG-subscription-heading {
     margin-bottom: 15px;
     font-size: 35px;
     color: #ffffff;
@@ -37,7 +37,7 @@
     font-size: 20px;
   } */
   
-  .footer-input {
+  .GG-input {
     padding: 8px 20px;
     border-radius: 2px;
     margin-right: 10px;
@@ -48,22 +48,22 @@
     border: 1px solid #fff;
   }
   
-  .footer-links {
+  .GG-links {
     width: 100%;
     max-width: 1000px;
     display: flex;
     justify-content: center;
   }
   
-  .footer-link-wrapper {
+  .GG-link-wrapper {
     display: flex;
   }
   
-  .footer-link-items {
+  .GG-link-items {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-left: 5cm;
+    margin-left: -2cm;
     margin-right: -2.5cm;   
     text-align: right;
     color: #ffffff;
@@ -73,11 +73,11 @@
   }
 
   /* ระยะห่างที่อยู่กับข้อความ */
-  .footer-link-items h2 {
+  .GG-link-items h2 {
     margin-bottom: 10px;
   }
   
-  .footer-link-items > h2 {
+  .GG-link-items > h2 {
     color: rgb(252, 252, 252);
     font-size: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
@@ -89,7 +89,7 @@
     text-decoration: none;
     margin-bottom: 0.5rem;
   } */
-  .footer-link-items > p {
+  .GG-link-items > p {
     color: rgb(255, 255, 255);
     line-height: 1.5;
     font-size: 18px;
@@ -97,33 +97,33 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
       'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
   }
-  .footer-link-items > a {
+  .GG-link-items > a {
     color: rgb(255, 255, 255);
     font-size: 18px;
     font-weight: 800;
     line-height: 1.5;   
   }
   
-  .footer-link-items a:hover {
+  .GG-link-items a:hover {
     color: #ffffff;
     transition: 0.3s ease-out;
   }
   
-  .footer-email-form h2 {
+  .GG-email-form h2 {
     margin-bottom: 2rem;
   }
   
-  .footer-input::placeholder {
+  .GG-input::placeholder {
     color: #b1b1b1;
   }
   
   /* Social Icons */
-  .social-icon-link {
+  .GG-icon-link {
     color: #fff;
     font-size: 24px;
   }
   
-  .social-media {
+  .GG-media {
     max-width: 1000px;
     width: 100%;   
   }
@@ -156,7 +156,7 @@
     margin-bottom: 16px;
   }
   
-  .op{
+  .GG{
     line-height:  110px;
     color: rgb(255, 255, 255);
     margin-bottom: -50px;
@@ -165,11 +165,11 @@
   }
   
   @media screen and (max-width: 820px) {
-    .footer-links {
+    .GG-links {
       padding-top: 2rem;
     }
   
-    .footer-input {
+    .GG-input {
       width: 100%;
     }
   
@@ -177,7 +177,7 @@
       width: 100%;
     }
   
-    .footer-link-wrapper {
+    .GG-link-wrapper {
       flex-direction: column;
     }
   
@@ -188,6 +188,6 @@
   
   @media screen and (max-width: 768px) {
   }
-  hr.style1{
-    border-top: 1px solid #8c8b8b;
+  hr{
+    border-top: 1px solid #ffffff;
   }
