--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,20 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: 'PT Sans', sans-serif;
 }
+h1{
+  font-size: 25px;
+}
 
+h2{
+  font-size: 20px;
+}
 .home,
 .services,
 .products,
