--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,10 +1,12 @@
+
 .footer-container {
     background-color: #303030;
-    padding: 2rem 0 3rem 0;
+    padding: 2rem 0 2rem 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: -0.6px;
     
   }
   
