--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -2,7 +2,8 @@ video {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  position: fixed;
+  /* position: fixed; */
+  position: absolute;
   z-index: -1;
 }
 
