--- a/src/components/Perfcards.css
+++ b/src/components/Perfcards.css
@@ -1,12 +1,15 @@
 .perfomance {
     padding: 1rem; /*ระยะห่างกล่องข้อความกับข้างๆ*/
     background: rgb(232, 247, 250);
+    
 }
 
 .perfomance > h1 {
     padding: 0.5rem;
     color: rgb(255, 255, 255);
     font-size: 40px;
+    margin-left: 100px;
+    margin-right: 100px;
     text-align: center;
     /* background-color: rgb(38, 9, 141); */
     background-color:#0741ad;
