--- a/src/components/ProD.css
+++ b/src/components/ProD.css
@@ -11,6 +11,7 @@
     margin-top: 0.5cm;
     margin-bottom: 0.5cm;
     color: rgb(255, 255, 255);
+    font-size: 2rem;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif,'Designil Thai Font','Kanit';
 }
