--- a/src/assets/css/proD.css
+++ b/src/assets/css/proD.css
@@ -3,7 +3,7 @@
     /* background: rgb(2, 71, 88); */
     /* background:#003b73 */
     /* background:rgb(0, 0, 0); */
-    background:url("../images/G11.jpg");   
+    background:url("../../images/G11.jpg");   
 }
   
 .backpro>h1 {
