--- a/src/assets/css/footer2.css
+++ b/src/assets/css/footer2.css
@@ -187,6 +187,23 @@
     .social-media-wrap {
       flex-direction: column;
     }
+    .GG{
+    line-height:  110px;
+    color: rgb(255, 255, 255);
+    margin-bottom: 50px;
+    font-size: 10px;
+    /* padding: 4rem 0 2rem ; */
+    padding: 1rem 0 0rem ;
+    
+  }
+  .GG-link-items > a {
+    color: rgb(255, 255, 255);
+    font-size: 12px;
+    font-weight: 800;
+    line-height: 1.5; 
+    margin-left: 80px;  
+  }
+  
   }
   
   @media screen and (max-width: 768px) {
