--- a/src/assets/css/heroSection.css
+++ b/src/assets/css/heroSection.css
@@ -66,12 +66,13 @@ video {
 
 @media screen and (max-width: 768px) {
   .hero-container > h1 {
-    font-size: 50px;
+    font-size: 30px;
     margin-top: -100px;
   }
 
   .hero-container > p {
-    font-size: 30px;
+    font-size: 25px;
+    margin-top: 200px
   }
 
   .btn-mobile {
