--- a/src/assets/css/perfcards.css
+++ b/src/assets/css/perfcards.css
@@ -8,8 +8,8 @@
     padding: 0.5rem;
     color: rgb(255, 255, 255);
     font-size: 40px;
-    margin-left: 100px;
-    margin-right: 100px;
+    /* margin-left: 100px;
+    margin-right: 100px; */
     text-align: center;
     /* background-color: rgb(38, 9, 141); */
     background-color:#0741ad;
