--- a/src/assets/css/reward.css
+++ b/src/assets/css/reward.css
@@ -1,10 +1,11 @@
 .fg>img{
+    max-width:550px;
+    height: auto;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
-    height: 10%;
 }
+
 .fg>h1{
     text-align: center;
     font-size: 65px;
